liteOS-M/rust_kernel/kernel/test/los_memory_c.h

#define OS_LITTLE_ENDIAN 4660
#define OS_BIG_ENDIAN 17185
#define OS_BYTE_ORDER 4660
#define LOS_OK 0
#define OS_FAIL 1
#define OS_64BIT_MAX -1
#define __LIBATOMIC_N_LOCKS 16
#define OS_SYS_CLOCK 1000000
#define LOSCFG_BASE_CORE_TICK_PER_SECOND 100
#define LOSCFG_BASE_CORE_TICK_PER_SECOND_MINI 1000
#define LOSCFG_BASE_CORE_TICK_PERIOD_MS 10
#define LOSCFG_BASE_CORE_TICK_WTIMER 0
#define LOSCFG_BASE_CORE_TICK_RESPONSE_MAX 0
#define LOSCFG_PLATFORM_HWI 1
#define LOSCFG_USE_SYSTEM_DEFINED_INTERRUPT 1
#define LOSCFG_PLATFORM_HWI_LIMIT 32
#define LOSCFG_BASE_CORE_TSK_DEFAULT_PRIO 10
#define LOSCFG_BASE_CORE_TSK_LIMIT 5
#define LOSCFG_BASE_CORE_TSK_IDLE_STACK_SIZE 384
#define LOSCFG_BASE_CORE_TSK_DEFAULT_STACK_SIZE 1024
#define LOSCFG_BASE_CORE_TIMESLICE 1
#define LOSCFG_BASE_CORE_TIMESLICE_TIMEOUT 20000
#define LOSCFG_BASE_CORE_TSK_MONITOR 0
#define LOSCFG_BASE_CORE_EXC_TSK_SWITCH 0
#define LOS_TASK_PRIORITY_HIGHEST 0
#define LOS_TASK_PRIORITY_LOWEST 31
#define LOSCFG_BASE_CORE_TASKSTACK_INDEPENDENT 0
#define LOSCFG_STACK_POINT_ALIGN_SIZE 8
#define LOSCFG_BASE_IPC_SEM 1
#define LOSCFG_BASE_IPC_SEM_LIMIT 6
#define OS_SEM_COUNTING_MAX_COUNT 65535
#define LOSCFG_BASE_IPC_MUX 1
#define LOSCFG_BASE_IPC_MUX_LIMIT 6
#define LOSCFG_BASE_IPC_QUEUE 1
#define LOSCFG_BASE_IPC_QUEUE_LIMIT 6
#define LOSCFG_BASE_IPC_STATIC_QUEUE_LIMIT 3
#define LOSCFG_BASE_CORE_SWTMR 1
#define LOSCFG_BASE_CORE_SWTMR_LIMIT 5
#define LOSCFG_BASE_CORE_TSK_SWTMR_STACK_SIZE 1024
#define LOSCFG_BASE_CORE_SWTMR_ALIGN 0
#define OS_SWTMR_HANDLE_QUEUE_SIZE 5
#define LOS_COMMON_DIVISOR 10
#define LOSCFG_SYS_EXTERNAL_HEAP 0
#define LOSCFG_SYS_HEAP_SIZE 65536
#define LOSCFG_MEM_MUL_POOL 1
#define LOSCFG_MEM_FREE_BY_TASKID 0
#define LOSCFG_BASE_MEM_NODE_INTEGRITY_CHECK 0
#define LOSCFG_MEM_OMIT_LR_CNT 4
#define LOSCFG_MEM_RECORD_LR_CNT 3
#define LOSCFG_MEM_LEAKCHECK_RECORD_MAX_NUM 1024
#define LOSCFG_MEM_WATERLINE 1
#define OS_SYS_MEM_NUM 20
#define OS_SYS_NOCACHEMEM_SIZE 0
#define LOSCFG_MEM_MUL_REGIONS 0
#define LOSCFG_EXC_HARDWARE_STACK_PROTECTION 0
#define CMSIS_OS_VER 2
#define LOSCFG_KERNEL_PRINTF 1
#define LOSCFG_MPU_ENABLE 0
#define LOSCFG_TASK_MEM_USED 0
#define LOSCFG_PLATFORM_HWI_WITH_ARG 0
#define LOSCFG_ARCH_HWI_VECTOR_ALIGN 256
#define LOSCFG_KERNEL_SIGNAL 0
#define LOSCFG_KERNEL_PM 0
#define LOSCFG_KERNEL_PM_IDLE 0
#define LOSCFG_SHELL_STACK_SIZE 4096
#define LOG_EMG_LEVEL 0
#define LOG_COMMON_LEVEL 1
#define LOG_ERR_LEVEL 2
#define LOG_WARN_LEVEL 3
#define LOG_INFO_LEVEL 4
#define LOG_DEBUG_LEVEL 5
#define PRINT_LEVEL 2
typedef unsigned int EXC_TYPE;
typedef void (*ExcHookFn)(EXC_TYPE excType);
typedef int INT32;
typedef unsigned int UINTPTR;
typedef unsigned int UINT32;
typedef void (*BACK_TRACE_HOOK)(UINTPTR *LR, UINT32 LRSize, UINT32 jumpCount, UINTPTR SP);
typedef char CHAR;
typedef unsigned short UINT16;
typedef unsigned char UINT8;
typedef unsigned long long UINT64;
typedef unsigned int BOOL;
typedef unsigned int LogModuleType;
#define EXC_TYPE_EXC_REBOOT 0
#define EXC_TYPE_EXC_ASSERT 1
#define EXC_TYPE_EXC_PANIC 2
#define EXC_TYPE_EXC_STACKOVERFLOW 3
#define EXC_TYPE_EXC_INTERRUPT 4
#define EXC_TYPE_EXC_TYPE_END 5
#define LogModuleType_LOG_MODULE_KERNEL 0
#define LogModuleType_LOG_MODULE_FS 1
#define LogModuleType_LOS_MODULE_OTHERS 2
extern void OsExcHookRegister(ExcHookFn excHookFn);
extern void OsDoExcHook(EXC_TYPE excType);
extern int printf(const char *fmt);
extern INT32 OsLogLevelCheck(INT32 level);
extern void OsBackTraceHookSet(BACK_TRACE_HOOK hook);
extern void OsBackTraceHookCall(UINTPTR *LR, UINT32 LRSize, UINT32 jumpCount, UINTPTR SP);
extern void OsExcHookRegister(ExcHookFn excHookFn);
extern void OsDoExcHook(EXC_TYPE excType);
extern int printf(const char *fmt);
extern INT32 OsLogLevelCheck(INT32 level);
extern void OsBackTraceHookSet(BACK_TRACE_HOOK hook);
extern void OsBackTraceHookCall(UINTPTR *LR, UINT32 LRSize, UINT32 jumpCount, UINTPTR SP);